# DGutils

./: .gitignore  .pylintrc  README.md  manifest.in  pyproject.toml
src/dgutils/: __init__.py  actions.py  constants.py  decorators.py  exceptions.py  linker.py  project_shared.py  schema.py  singleton.py  typing.py
src/dgutils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
